TUIOdroid for Android Changelog

v0.9 02.04.2011
---------------
* Add TUIO verbosity option 
* Improved help dialog
* updated JavaOSC Library

v0.8 31.03.2011
---------------
* Option for screen orientation 
* Improved settings dialog
* New application icon

v0.7 29.03.2011
---------------
* TUIO 1.1 source message
* correct incremental Session ID
* implement Velocity and Acceleration attributes
* UI tweaks & application Icon
* android 2.0 target

v0.6 27.03.2011
---------------
* initial source release