@@ -21,7 +21,7 @@
     </LinearLayout>
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/button_Layout">
         <Button android:layout_height="wrap_content" android:id="@+id/saveButton" android:text="   Save Settings   " android:layout_width="140dip" android:padding="5dip"></Button>
-        <TextView android:layout_height="wrap_content" android:layout_width="140dip" android:id="@+id/localIP" android:text="local IP: 127.0.0.1" android:paddingLeft="10dip"></TextView>
+        <TextView android:layout_height="wrap_content" android:id="@+id/localIP" android:text="local IP: 127.0.0.1" android:paddingLeft="10dip" android:layout_width="fill_parent"></TextView>
     </LinearLayout>
   
 </LinearLayout>
